package ca.mcmaster.cas.se2aa4.a2.island.elevation;

public interface IElevation {
    /**
     *
     * @return The elevation belonging to this element
     */
    double getElevation();

    /**
     *
     * @param elevation The elevation to set this element to
     */
    void setElevation(double elevation);


}
